# batchable

./: README.md  batch.py  pyproject.toml  usage.py
