[tool.poetry]
name = "batchable"
version = "0.2.1"
description = "Hide your batch logic away from the actual code."
authors = ["L3viathan <git@l3vi.de>"]
packages = [
    {"include" = "batch.py"},
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
